# WikipediaSearchEngine

./: README.md  requirements.txt
index_server/: pyproject.toml
index_server/index/: __init__.py  config.py  pagerank.out
index_server/index/api/: __init__.py  main.py
inverted_index/: example_run.sh  map0.py  map1.py  map2.py  map3.py  pipeline.sh  pylintrc  reduce0.py  reduce1.py  reduce2.py  reduce3.py  stopwords.txt
inverted_index/example_input/: filepaths.txt
inverted_index/example_input/crawl/: 0001.html  0002.html  0003.html
inverted_index/example_output/: part-00000  part-00001  part-00002
inverted_index/input/: filepaths.txt
search_server/: pyproject.toml
search_server/search/: __init__.py  config.py  model.py
search_server/search/sql/: search.sql
search_server/search/static/css/: style.css
search_server/search/templates/: results.html
search_server/search/views/: __init__.py  main.py
tests/: conftest.py  test_index_server_public.py  test_pipeline_public.py  test_search_server_public.py  test_style.py
tests/testdata/: search.sqlite3
tests/testdata/test_doc_count_one_mapper/input/: filepaths.txt
tests/testdata/test_pipeline03/: expected.txt
tests/testdata/test_pipeline03/input/: filepaths.txt
tests/testdata/test_pipeline05/: expected.txt
tests/testdata/test_pipeline05/input_multi/: filepaths1.txt
tests/testdata/test_pipeline06/: expected.txt
tests/testdata/test_pipeline06/input_multi/: filepaths2.txt
tests/testdata/test_pipeline15/: part-00000  part-00001  part-00002
tests/utils/: pipeline.py
(+39 files in other folders)
