[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "search"
version = "1.0.0"
dependencies = [
    "bs4",
    "Flask",
    "html5validator",
    "pycodestyle",
    "pydocstyle",
    "pylint",
    "pytest",
    "requests",
    "pytest-mock",
]
requires-python = ">=3.10"

[tool.pylint."messages control"]
disable = ["cyclic-import"]
